# machina

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Makefile  README.md  README.zh.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: check.yml  docs.yml  machina-tests.yml  publish.yml  riscv-tests.yml  tg-rcore-tutorial-tests.yml  tg-rcore-tutorial.yml
accel/: Cargo.toml
accel/src/: code_buffer.rs  lib.rs  plat.rs  regalloc.rs  translate.rs
accel/src/exec/: exec_loop.rs  mod.rs  tb_store.rs
accel/src/ir/: tb.rs
accel/src/x86_64/: codegen.rs  emitter.rs
backend/: Cargo.toml
backend/src/: constraint.rs  lib.rs  liveness.rs  optimize.rs  regalloc.rs  translate.rs
core/: Cargo.toml
core/src/: address.rs  cpu.rs  lib.rs  machine.rs  monitor.rs  trace.rs  wfi.rs
decode/: Cargo.toml
decode/src/: lib.rs
disas/: Cargo.toml
docs/: README.md  coding-style.md  design.md  ir-ops.md  os2atc-script.md  os2atc-slides.md  performance.md  testing.md  x86_64-backend.md
docs/en/: architecture.md  (+11 more)
exec/: Cargo.toml
frontend/: Cargo.toml  build.rs
gdbstub/: Cargo.toml
hw/virtio/: Cargo.toml
hw/virtio/src/: block.rs  device.rs  lib.rs  mmio.rs  net.rs  pci.rs  queue.rs
memory/: Cargo.toml
monitor/: Cargo.toml
roms/: Makefile
scripts/: gen_pptx.py  gen_pptx_shapes.py  publish.sh  run-rcore-tutorial-smoke.sh  run-riscv-tests.sh
softfloat/: Cargo.toml
src/: difftest.rs  main.rs
system/: Cargo.toml
tests/: Cargo.toml  build.rs
util/: Cargo.toml
(+178 files in other folders)
