[package]
name = "machina-hw-virtio"
version.workspace = true
edition.workspace = true
description = "VirtIO MMIO transport with block and network device models"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["riscv", "emulator", "virtio", "block-device"]
categories = ["emulators", "hardware-support"]

[dependencies]
machina-core = { workspace = true }
machina-hw-core = { workspace = true }
machina-memory = { workspace = true }
libc = { workspace = true }
